@@ -13,9 +13,10 @@
 #   You should have received a copy of the GNU General Public License along
 #   with Bash; see the file COPYING.  If not, write to the Free Software
 #   Foundation, 59 Temple Place, Suite 330, Boston, MA 02111 USA.
-#$Id: Makefile.am,v 1.3 2007/01/04 04:26:45 rockyb Exp $
+#$Id: Makefile.am,v 1.4 2007/01/20 11:32:29 rockyb Exp $
 
-EXTRA_DIST := bashdb.el bashdb-test.el elk-test.el
+check_DATA := bashdb-test.el bashdb-test.el.in elk-test.el
+EXTRA_DIST := bashdb.el $(check_DATA)
 ELCFILES  :=  bashdb.elc
 if INSTALL_EMACS_LISP
 lisp_LISP := bashdb.el
@@ -24,4 +25,5 @@ endif
 test: check
 
 check:
-	$(EMACS) -batch -q -l bashdb-test.el elk-test.el
+	$(EMACS) -batch -q -l $(srcdir)/bashdb-test.el $(srcdir)/elk-test.el
+
