@@ -2,6 +2,12 @@
 ## autogenerated ChangeLog -- don't edit
 ##
 
+2007-01-20 Saturday 10:38  Rocky Bernstein <rocky@panix.com>
+
+	* bashdb.in, configure.ac, doc/bashdb.texi, test/Makefile.am,
+	  test/dbg-test1.sh, test/dbg-test1.sh.in, test/list.right,
+	  test/search.right: Change to make "make distcheck" work.
+
 2007-01-20 Saturday 03:50  Rocky Bernstein <rocky@panix.com>
 
 	* test/: brkpt2.right, bug-source.right, debug.right, finish.right,
